# ai_navigation

./: .gitignore  Makefile  README.md  __main_ai__.py  __main_movement__.py  pyproject.toml  requirements.txt
ai_navigation/: __init__.py
ai_navigation/data/: config-feedforward.txt
ai_navigation/data/pickles/fitness/: fitnessLines3.pickle  fitnessLines4.pickle
ai_navigation/data/pickles/genomes/: genome0.pickle  genome1.pickle  genome10.pickle  genome11.pickle  genome12.pickle  genome13.pickle  genome3.pickle  genome6.pickle  genome7.pickle  genome8.pickle  genome9.pickle
ai_navigation/data/pickles/roads/: road0.pickle  road1.pickle
ai_navigation/src/: car.py  constants.py
ai_navigation/src/simulation/: base_simulation.py  movement_simulation.py  train_simulation.py
ai_navigation/tests/car/: test_collision.py  test_help_functions.py  test_init.py  test_movement.py
ai_navigation/tests/simulation/: test_base_simulation.py  test_movement_simulation.py  test_train_simulation.py
app/: car.py  carDrift.py  race test.py  race_ai.py  race_movement.py  simulation.py
app/src/car/: car.py
app/src/simulation/: ai.py  base.py  movement.py
app/tests/: init_test.py
app/tests/test_car/: test_car_collision.py  test_car_help_functions.py  test_car_init.py  test_car_movement.py
app/tests/test_simulation/: test_ai_simulation.py  test_base_simulation.py  test_movement_simulation.py  test_simulation_init.py
app/utils/: config-feedforward.txt
app/utils/pickles/fitness/: fitnessLines0.pickle  fitnessLines1.pickle  fitnessLines2.pickle
examples/: interactive_training.py  only_movement.py
src/pickles/roads/: road2.pickle  road3.pickle  road4.pickle
